--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.13", features = ["derive"] }
 futures = "0.3.30"
 get_if_addrs = "0.5.3"
 ipnetwork = "0.20.0"
